# OS

./: CMakeLists.txt
LAB_1/: CMakeLists.txt  child.c  parent.c
LAB_1/inc/: child.h  parent.h  pshm_ucase.h
LAB_1/src/: child.c  core.c  main.c  pshm_ucase_bounce.c  pshm_ucase_send.c
LAB_2/: CMakeLists.txt
LAB_2/src/: main.c
LAB_2_1/task_1/: a.out  main.c  main.h
LAB_2_1/task_1/database/: data.txt
LAB_2_1/task_2/: a.out  main  main.c  main.h
LAB_2_1/task_2/main.dSYM/Contents/Resources/DWARF/: main
LAB_2_1/task_2/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
LAB_2_1/task_2/tests/: copy.txt  find.txt
LAB_2_1/task_7/: a.out  main.c  main.h
LAB_3/: CMakeLists.txt
LAB_3/inc/: child.h  main.h  pshm_ucase.h  shared_memory.h
LAB_3/src/: child.c  core.c  main.c  shared_memory.c
LAB_4/: CMakeLists.txt
LAB_4/inc/: allocator_1.h  allocator_2.h  core.h
LAB_4/src/: allocator_1.c  allocator_2.c  main.c
